
Moqui Framework Release Notes

===========================================================================
Release 1.3.2 - Date TBD
===========================================================================

Moqui Framework 1.3.1 is a minor new feature and bug fix release.

New Features:

- Added econdition.@or-null attribute to make the condition an or between
  the specified condition and null
- Screen form-single forms automatically add a "_formMap" field to the
  context with the Map used for the form; useful for reused forms that may
  specify different form-single.@map values
- XML Actions iterate generates _index and _hasNext fields
- ArtifactFacade tracks artifact running time, keeps an hierarchical
  instead of flat history, and can print a tree of the history
- Added entity.@allow-user-field attribute to specify when UserField defs
  are considered, for security and performance reasons

Bug Fixes:
- Fixed issue in ListCondition with null list entries, and improved the
  factory method with condition List parameter when List has only one
  condition to just use that condition
- Fixed issue in service input conversion treating empty values as nulls

===========================================================================
Release 1.3.1 - 20 Oct 2013
===========================================================================

Moqui Framework 1.3.1 is a minor new feature, bug fix, and performance
enhancement release.

New Features:

- Performance improvements based on profiling (tested screens run
  around 1.3 to 2 times as fast)
- form-list and section-iterate automatically add *_index and
  *_has_next context fields following the pattern used in Freemarker
- formDisplayOnly parameter (or context value) to make the form render as
  display-only (read-only)
- dynamic and static layouts
  - static layout uses entire browser width and is CSS based
  - dynamic layout uses jQuery Layout plugin and supports closing,